<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22A7F0"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="1dp"
        android:background="#F4D03F"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/matematica"
        android:textSize="32sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:layout_constraintVertical_bias="0.65">

        <Button
            android:id="@+id/btnRelacoes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/rel"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitulo"
        app:layout_constraintVertical_bias="0.797">

        <Button
            android:id="@+id/btnCombinatoria"
            android:layout_width="162dp"
            android:layout_height="81dp"
            android:layout_weight="2"
            android:onClick="abrirAnaliseCombinatoria"
            android:text="@string/analise"
            android:textSize="16sp" />

        <Space
            android:layout_width="1dp"
            android:layout_height="40sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnConjuntos"
            android:layout_width="162dp"
            android:layout_height="81dp"
            android:layout_weight="2"
            android:onClick="abrirOperacoesConjuntos"
            android:text="@string/opconjuntos"
            android:textSize="16sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>