<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/menuconjunto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:columnCount="9"
        app:orientation="horizontal"
        app:rowCount="1">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="67dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center|center_horizontal"
                    android:src="@drawable/dice" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/uniao"
                    android:textAlignment="center"
                    android:textColor="@color/corbackGroundbottomSheet"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <ImageView
                    android:layout_width="67dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dice" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/intersecao"
                    android:textAlignment="center"
                    android:textColor="@color/corbackGroundbottomSheet"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="110dp"-->
<!--            android:layout_height="110dp"-->
<!--            android:layout_margin="2dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal|center_vertical"-->
<!--                android:orientation="vertical"-->
<!--                android:paddingLeft="2dp"-->
<!--                android:paddingRight="2dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="67dp"-->
<!--                    android:layout_height="57dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:src="@drawable/dice" />-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/complementar"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/corbackGroundbottomSheet"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textStyle="bold" />-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <ImageView
                    android:layout_width="67dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dice" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/diferenca_a_b"
                    android:textAlignment="center"
                    android:textColor="@color/corbackGroundbottomSheet"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

                <ImageView
                    android:layout_width="67dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/dice" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/diferenca_b_a"
                    android:textAlignment="center"
                    android:textColor="@color/corbackGroundbottomSheet"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="110dp"-->
<!--            android:layout_height="110dp"-->
<!--            android:layout_margin="2dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal|center_vertical"-->
<!--                android:orientation="vertical"-->
<!--                android:paddingLeft="2dp"-->
<!--                android:paddingRight="2dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="67dp"-->
<!--                    android:layout_height="57dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:src="@drawable/dice" />-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/conjunto_das_partes"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/corbackGroundbottomSheet"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textStyle="bold" />-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="110dp"-->
<!--            android:layout_height="110dp"-->
<!--            android:layout_margin="2dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal|center_vertical"-->
<!--                android:orientation="vertical"-->
<!--                android:paddingLeft="2dp"-->
<!--                android:paddingRight="2dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="67dp"-->
<!--                    android:layout_height="57dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:src="@drawable/dice" />-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/produtoCartesianoAxB"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/corbackGroundbottomSheet"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textStyle="bold" />-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="110dp"-->
<!--            android:layout_height="110dp"-->
<!--            android:layout_margin="2dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal|center_vertical"-->
<!--                android:orientation="vertical"-->
<!--                android:paddingLeft="2dp"-->
<!--                android:paddingRight="2dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="67dp"-->
<!--                    android:layout_height="57dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:src="@drawable/dice" />-->


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:padding="2dp"-->
<!--                    android:text="@string/produtoCartesianoBxA"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/corbackGroundbottomSheet"-->
<!--                    android:textSize="14sp"-->
<!--                    android:textStyle="bold" />-->

<!--            </LinearLayout>-->
<!--        </androidx.cardview.widget.CardView>-->

    </androidx.gridlayout.widget.GridLayout>
</HorizontalScrollView>